# samko

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
libsamko/: CMakeLists.txt  README
libsamko/include/libsamko/: cvutils.h  stringutils.h
libsamko/include/libsamko/calib2d/: calibprojective.h  coordhomog.h
libsamko/include/libsamko/serialization/: json_common.h  jsonreader.h  jsonwriter.h  memstorage.h  reader.h  serializable.h  serializer.h  writer.h
libsamko/include/libsamko/serialization/adapters/: matserializableadapter.h
libsamko/include/libsamko/targets/: correlrefiner.h  ellipsetargetrefiner.h  targetrefiner.h
libsamko/include/libsamko/ui/: uiexception.h  uifactory.h  uigriddetector.h
libsamko/src/: cvutils.cpp  stringutils.cpp
libsamko/src/calib2d/: calibprojective.cpp  coordhomog.cpp
libsamko/src/serialization/: json_common.cpp  jsonreader.cpp  jsonwriter.cpp  memstorage.cpp  reader.cpp  serializer.cpp  writer.cpp
libsamko/src/serialization/adapters/: matserializableadapter.cpp
libsamko/src/targets/: correlrefiner.cpp  ellipsetargetrefiner.cpp
libsamko/src/ui/: uigriddetector.cpp
libsamko/unittests/: CMakeLists.txt  main.cpp
libsamko/unittests/gmock/: CMakeLists.txt
libsamko/unittests/mocks/serialization/: mockserializable.h
libsamko/unittests/mocks/ui/: mockuifactory.h  mockuigriddetector.h
libsamko/unittests/tests/: common.cpp  common.h  strutilstest.cpp
libsamko/unittests/tests/calib2d/: calibprojectivetest.cpp
libsamko/unittests/tests/serialization/: basetest.cpp  common.cpp  common.h  jsontest.cpp
libsamko/unittests/tests/targets/: correlrefinertest.cpp  ellipsetargetrefinertest.cpp  targetrefinercommontest.h
samko_qt/: .gitignore  bussinessdelegate.cpp  bussinessdelegate.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtuifactory.cpp  qtuifactory.h  samko_qt.pro  utils.cpp  utils.h
samko_qt/forms/: calib2ddialog.cpp  calib2ddialog.h  calib2ddialog.ui
samko_qt/forms/tools/: ellipsetargetrefinerdialog.cpp  ellipsetargetrefinerdialog.h  ellipsetargetrefinerdialog.ui
samko_qt/widgets/: qmeasureview.cpp  qmeasureview.h
